--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
     "title":"Blog Title",
-    "subTitle":"Blog description",
+    "subTitle":"种一棵树最好的时间是十年前，其次是现在",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
+    
+
 }
